<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.hyunyong.test.lotto.viewmodel.LottoViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_lotto_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:hint="@string/lotto_order"
            android:inputType="number"
            android:padding="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_auto_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lotto_number_auto_crate"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_lotto_order" />

        <TextView
            android:id="@+id/tv_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="26sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_auto_create"
            android:text="@{vm.lottoNumber.toString()}"
            tools:text="12 42 53 44 55 66 77" />

        <Button
            android:id="@+id/btn_check_winner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_winner"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_number" />

        <Button
            android:id="@+id/btn_check_previous"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_winner_previous"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_check_winner" />

        <Button
            android:id="@+id/btn_check_number_frequency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/frequency_number"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_check_previous" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
